Modify Prioritization Algorithm - SDEV-1447 (#12490)